--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "nodeschool-costarica",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "~3.3.5",
+    "jquery.countdown": "^2.1.0"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -13,6 +14,5 @@
       ]
     }
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
