--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "jquery.countdown": "^2.1.0",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "jquery": "~2.2.2",
+    "fullpage.js": "~2.7.8"
   },
   "overrides": {
     "bootstrap-sass": {
