--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "engines": {
     "node": "^4.0.0"
   },
+  "scripts": {
+    "start": "gulp serve",
+    "lint": "standard app/scripts/**/*.js",
+    "deploy": "gulp deploy"
+  },
   "devDependencies": {
     "babel-core": "^5.5.6",
     "browser-sync": "^2.2.1",
@@ -25,6 +30,7 @@
     "gulp-useref": "^1.1.1",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
+    "standard": "^6.0.8",
     "wiredep": "^2.2.2"
   },
   "eslintConfig": {
